--- a/index.html
+++ b/index.html
@@ -43,11 +43,9 @@
       </div>
       <div class="description">
         <h2>Hello there, I'm Yashithi Dharmawimala!</h2>
-        <div class="passage"><p style="text-align: justify;">I'm a 22-year-old undergraduate studying Computer Science at the University of  Colombo, School of Computing.<br><br>
-          I received my secondary education from Methodist College, Colombo 03 from 2004 to 2015 and later switched to Visakha Vidyalaya, Colombo 05 for my advanced level. During my schooling years, I engaged in many extra-curricular activities such as the English Broadcasting Unit, English Literacy Association, Science Society, Information Communication Technology Society and many more.<br><br>
-          After my Advanced Level Examination, I interned at the Bandaranaike Centre for International Studies (BCIS, BMICH) for about a year and then joined the University of Colombo.<br><br>
-          I'm an active member of many clubs and associations in the university and I'm also engaged in other activities such as blogging, podcasting and compering.<br><br>
-          My interest in computer science sparked when I was pretty young and currently I am most fascinated by technologies like Machine Learning and AI. In future, I hope to bring about change in the technological sphere to the best of my ability.<br> </p>
+        <div class="passage"><p style="text-align: justify;">I'm a 22-year-old undergraduate studying Computer Science at the University of  Colombo, School of Computing.<br><br>I received my secondary education from Methodist College, Colombo 03 from 2004 to 2015 and later switched to Visakha Vidyalaya, Colombo 05 for my advanced level examination. During my schooling years, I engaged in many extra-curricular activities such as the English Broadcasting Unit, English Literacy Association, Science Society, Information Communication Technology Society and many more.
+
+After my Advanced Level Examination, I interned at the Bandaranaike Centre for International Studies (BCIS, BMICH) for about a year and then joined the University of Colombo.<br><br><hr><br><br> Tech Enthusiast, Volunteer, Leader, Public Speaker and Comperer, Singer, Blogger and so much more! <br> </p>
        </div>
      </div>
    </div>
