--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <ul>
       <li><a href="http://anecdotes.ml/" id="end">Anecdotes</a></li>
       <li><a href="https://medium.com/machine-learning-for-beginners">Machine Learning Blog</a></li>
-      <li><a href="https://medium.com/@yashithi">Blog</a></li>
+      <li><a href="https://yashithi.medium.com/">Blog</a></li>
       <li><a href="#" id="active">Home</a></li>
     </ul>
   </div>
@@ -51,7 +51,7 @@ After my Advanced Level Examination, I interned at the Bandaranaike Centre for I
    </div>
   </div>
   <div class="boxThree">
-    <img src="images/blog.png" class="blog"><button class="btn"onclick="window.location.href='https://medium.com/@yashithi';" >  Visit Blog  </button>
+    <img src="images/blog.png" class="blog"><button class="btn"onclick="window.location.href='https://yashithi.medium.com/';" >  Visit Blog  </button>
   </div>
   <div id="boxFour">
     <img src="images/ml.png" id="ml">
